--- a/MyCV.html
+++ b/MyCV.html
@@ -11,19 +11,19 @@
 </head>
 <body class="d-flex justify-content-center align-items-center vh-100 bg-light">
 
-    <div class="card text-center shadow-lg p-4" style="width: 18rem;">
-        <img src="images/profile.png" class="card-img-top rounded-circle mx-auto mt-3" alt="Profile Photo" style="width: 120px; height: 120px;">
+    <div class="card text-center shadow-lg p-4" style="width: 20rem;">
+        <img src="Basake.png" class="card-img-top rounded-circle mx-auto mt-3" alt="Profile Photo" style="width: 120px; height: 120px;">
         <div class="card-body">
-            <h4 class="card-title">Your Name</h4>
-            <h6 class="text-muted">EDUCATION</h6>
-            <p>B.Sc. Computer Science</p>
+            <h4 class="card-title">Chiradet Donphaiyon</h4>
+            <h6 class="text-muted">CMU</h6>
+            <p>B.Sc. Digital Game</p>
 
             <h6 class="text-muted">SKILLS</h6>
             <div>
-                <span class="badge bg-secondary">HTML</span>
-                <span class="badge bg-secondary">CSS</span>
-                <span class="badge bg-secondary">JavaScript</span>
-                <span class="badge bg-secondary">Bootstrap</span>
+                <span class="badge bg-secondary">Game Designer</span>
+                <span class="badge bg-secondary">Unity</span>
+                <span class="badge bg-secondary">GDD</span>
+                <span class="badge bg-secondary">Unreal</span>
             </div>
 
             <button id="contactBtn" class="btn btn-primary mt-4">View Contact</button>
