--- a/MyCV.html
+++ b/MyCV.html
@@ -12,7 +12,7 @@
 <body class="d-flex justify-content-center align-items-center vh-100 bg-light">
 
     <div class="card text-center shadow-lg p-4" style="width: 20rem;">
-        <img src="Basake.png" class="card-img-top rounded-circle mx-auto mt-3" alt="Profile Photo" style="width: 120px; height: 120px;">
+        <img src="Basake.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Profile Photo" style="width: 120px; height: 120px;">
         <div class="card-body">
             <h4 class="card-title">Chiradet Donphaiyon</h4>
             <h6 class="text-muted">CMU</h6>
