--- a/MyCV.html
+++ b/MyCV.html
@@ -9,7 +9,7 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="d-flex justify-content-center align-items-center vh-100 bg-light">
+<body class="d-flex justify-content-center align-items-center vh-100">
 
     <div class="card text-center shadow-lg p-4" style="width: 20rem;">
         <img src="Basake.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Profile Photo" style="width: 120px; height: 120px;">
@@ -20,10 +20,10 @@
 
             <h6 class="text-muted">SKILLS</h6>
             <div>
-                <span class="badge bg-secondary">Game Designer</span>
-                <span class="badge bg-secondary">Unity</span>
-                <span class="badge bg-secondary">GDD</span>
-                <span class="badge bg-secondary">Unreal</span>
+                <span class="badge custom-badge">Game Designer</span>
+                <span class="badge custom-badge">Unity</span>
+                <span class="badge custom-badge">GDD</span>
+                <span class="badge custom-badge">Unreal</span>
             </div>
 
             <button id="contactBtn" class="btn btn-primary mt-4">View Contact</button>
